added other pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -82,3 +82,13 @@ ul{
   display: block;
   
 }
+
+
+.page-name{
+  font-style: italic;
+}
+.btn{
+  color: orange;
+  background-color: aqua;
+  border-color: orange;
+}
