--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@ ul{
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  min-height: 700px;
+  min-height: 100vh;
 }
 
 .table {
